--- a/prometheus_setup/sensor-server.yml
+++ b/prometheus_setup/sensor-server.yml
@@ -13,5 +13,4 @@ scrape_configs:
     scrape_interval: 10s
 
     file_sd_configs:
-      - files:
-        - "targets.json"
+      - files:["prometheus_server.json", "targets.json"]
